[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/MiniCard.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Roulette.gd" type="Script" id=2]
[ext_resource path="res://Resources/GFX/StartScreenBackGround.png" type="Texture" id=3]
[ext_resource path="res://Resources/GFX/StatusBars/NoItem.png" type="Texture" id=4]
[ext_resource path="res://Resources/GFX/Interface/Font/Card.tres" type="DynamicFont" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Appearance"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1600, 1000 ), Vector2( 540, 1000 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MiniCard1:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 100, 100 ), Vector2( 0, -630 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MiniCard1:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.6, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MiniCard2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.6, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 80, 80 ), Vector2( 540, -350 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MiniCard2:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.6, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -125.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("MiniCard3:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.6, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 60, 60 ), Vector2( -540, -350 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("MiniCard3:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.6, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 125.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("MiniCard4:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.6, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 40, 40 ), Vector2( 540, 350 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("MiniCard4:rotation_degrees")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0.6, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -55.0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("MiniCard5:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0.6, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 20, 20 ), Vector2( -540, 350 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("MiniCard5:rotation_degrees")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0.6, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 55.0 ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("MiniCard6:position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0.6, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 630 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("MiniCard6:rotation_degrees")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="Roulette" type="Control" groups=[
"Roulette",
]]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 540, 960 )
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RouletteController" type="Sprite" parent="."]
position = Vector2( 1600, 1000 )
scale = Vector2( 0.8, 0.8 )

[node name="MiniCard1" parent="RouletteController" instance=ExtResource( 1 )]
position = Vector2( 100, 100 )

[node name="Coords" type="Label" parent="RouletteController/MiniCard1"]
margin_left = -42.3757
margin_top = -350.635
margin_right = 1.62427
margin_bottom = -328.635
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 5 )
text = "12345"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MiniCard2" parent="RouletteController" instance=ExtResource( 1 )]
position = Vector2( 80, 80 )

[node name="Coords" type="Label" parent="RouletteController/MiniCard2"]
margin_left = -43.5892
margin_top = -351.848
margin_right = 0.410767
margin_bottom = -329.848
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 5 )
text = "12345"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MiniCard3" parent="RouletteController" instance=ExtResource( 1 )]
position = Vector2( 60, 60 )

[node name="Coords" type="Label" parent="RouletteController/MiniCard3"]
margin_left = -43.0348
margin_top = -345.99
margin_right = 0.96521
margin_bottom = -323.99
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 5 )
text = "12345"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MiniCard4" parent="RouletteController" instance=ExtResource( 1 )]
position = Vector2( 40, 40 )

[node name="Coords" type="Label" parent="RouletteController/MiniCard4"]
margin_left = -40.7125
margin_top = -347.203
margin_right = 3.28748
margin_bottom = -325.203
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 5 )
text = "12345"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MiniCard5" parent="RouletteController" instance=ExtResource( 1 )]
position = Vector2( 20, 20 )

[node name="Coords" type="Label" parent="RouletteController/MiniCard5"]
margin_left = -43.6935
margin_top = -348.417
margin_right = 0.306519
margin_bottom = -326.417
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 5 )
text = "12345"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MiniCard6" parent="RouletteController" instance=ExtResource( 1 )]

[node name="Coords" type="Label" parent="RouletteController/MiniCard6"]
margin_left = -43.1389
margin_top = -351.398
margin_right = 0.861084
margin_bottom = -329.398
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 5 )
text = "12345"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="RouletteController"]
anims/Appearance = SubResource( 1 )

[node name="Tween" type="Tween" parent="RouletteController"]

[node name="Timer" type="Timer" parent="RouletteController"]
wait_time = 1.5

[node name="UpdateVarY" type="Timer" parent="RouletteController"]
wait_time = 3.01
one_shot = true

[node name="FinalTimer" type="Timer" parent="RouletteController"]
wait_time = 4.0
one_shot = true

[node name="Timer_start_final_anim" type="Timer" parent="RouletteController"]

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.572549 )
position = Vector2( -156.205, -47.7292 )
normal = ExtResource( 3 )

[node name="Position2D" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="TweenPosition" type="Tween" parent="Position2D"]
[connection signal="animation_finished" from="RouletteController/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="RouletteController/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="RouletteController/UpdateVarY" to="." method="_on_UpdateVarY_timeout"]
[connection signal="timeout" from="RouletteController/FinalTimer" to="." method="_on_FinalTimer_timeout"]
[connection signal="timeout" from="RouletteController/Timer_start_final_anim" to="." method="_on_Timer_start_final_anim_timeout"]
[connection signal="released" from="TouchScreenButton" to="." method="_on_TouchScreenButton_released"]

[editable path="RouletteController/MiniCard1"]
